--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,17 @@ button:hover{
     cursor:pointer;
 }
 body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr, 1fr;
+    grid-template-columns: 100%;
     height: 100vh;
     width: 100vw;
+    justify-content: center;
 }
 
 .title{
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     align-items: center;
@@ -29,8 +32,8 @@ body{
     margin-right: auto;
 }
 
-.title div{
-    display:flex;
+.buttons{
+    display: flex;
     justify-content: center;
 }
 .title button{
@@ -38,8 +41,11 @@ body{
     border-radius: 10px;
     font-size:2em;
     background-color: white;
-    height: 5vh;
-    width: 15vh;
+}
+.winners{
+    display:flex;
+    justify-content: space-evenly;
+    gap: 2em;
 }
 
 .players{
@@ -47,11 +53,13 @@ body{
     justify-content: space-evenly;
     gap: 2em;
 }
+
 .none{
     display: none;
 }
 .board{
-    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     width: 30vw;
     height: 30vw;
@@ -60,7 +68,7 @@ body{
 }
 
 .square{
-    background-size: 15em;
+    background-size: 80%;
     background-position: center;
     background-repeat: no-repeat;
 }
